--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,24 +1,29 @@
 {% extends 'base.html' %}
 {% block title %}Login{% endblock %}
 {% block messages %}
-   {{super()}}
-   {%if form.errors %}
-     <ul class="alert alert-danger">
-       {% for field, errors in form.errors.items() %}
-         <li>{{field}} {% for error in errors %}{{ error }}{% endfor %}</li>
-       {% endfor %}
-     </ul>
-   {% endif %}
+  {{super()}}
+  {%if form.errors %}
+    <ul class="alert alert-danger">
+      {% for field, errors in form.errors.items() %}
+        <li>{{field}} {% for error in errors %}{{ error }}{% endfor %}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
 {% endblock %}
 
 {% block page_body %}
-       <form action="{{ url_for('register') }}" method="post">
+       <form action="{{ url_for('simplelogin.login') }}" method="post">
             <div class="form-group">
             {{ form.csrf_token }}
             {{form.username.label}}<div class="form-control">{{ form.username }}</div><br>
             {{form.password.label}}<div class="form-control"> {{ form.password }}</div><br>
             {% if next %}<input type="hidden" name="next" value="{{next}}">{% endif %}
-           <input type="submit" value="send">
-           <a href="{{url_for('register')}}">register</a>
+            <div class="btn-group" style="width:100px; height: 100px;">
+           <input type="submit" value="send" class="btn form-control btn-primary">
+           <br>
+           <br>
+           <a href="/register" class="btn form-control btn-info">Register</a>
+            </div>
+           </div>
        </form>
 {% endblock %}
